--- a/style2.css
+++ b/style2.css
@@ -387,7 +387,7 @@ animation-delay: -0.5s;
     margin-top: 130px;
     display: flex;
     width: 17.80%;
-box-shadow: 2px 1px 25px 2px #b6b6f0;
+box-shadow: 2px 1px 25px 2px white;
     /* background-color: white; */
     margin-left: 13%;
     height: 270px;
